<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/text_instructions"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_instruction"
        android:layout_marginTop="20dp"
        android:text="@string/length"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        />

    <RadioGroup
        android:id="@+id/radio_group_length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/header_length"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">
        <RadioButton
            android:id="@+id/radio_button_short"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_short"/>
        <RadioButton
            android:id="@+id/radio_button_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_medium"/>
        <RadioButton
            android:id="@+id/radio_button_long"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_long"/>

    </RadioGroup>

    <CheckBox
        android:id="@+id/check_lowercase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:text="@string/lowercase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group_length" />

    <CheckBox
        android:id="@+id/check_uppercase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/uppercase"
        app:layout_constraintStart_toEndOf="@id/check_lowercase"
        app:layout_constraintEnd_toStartOf="@id/check_characters"
        app:layout_constraintTop_toBottomOf="@id/radio_group_length"/>

    <CheckBox
        android:id="@+id/check_characters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/characters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group_length" />

    <Button
        android:id="@+id/button_generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:fontFamily="sans-serif"
        android:text="@string/generate"
        android:textColor="@android:color/white"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/check_lowercase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/button_generate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy_clipboard"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:background="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/text_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableStart="@drawable/ic_copy_black"
        />


</android.support.constraint.ConstraintLayout>